@@ -530,6 +530,8 @@ the most common questions are answered.
   followd by a vid_restart. Please note that very old graphic cards may not
   support antialiasing at all.
 
+- If you want to scale the HUD (e.g. for high resoltutions), set the
+  gl_hudscale cvar to a value > 1 (2.0 works well).
 
 5.2 Input
 ---------
