@@ -141,6 +141,8 @@ cvar_t *gl_anisotropic_avail;
 cvar_t *gl_lockpvs;
 cvar_t *gl_msaa_samples;
 
+cvar_t	*gl_hudscale;
+
 cvar_t *vid_fullscreen;
 cvar_t *vid_gamma;
 
@@ -1017,6 +1019,8 @@ R_Register(void)
 	gl_customwidth = Cvar_Get("gl_customwidth", "1024", CVAR_ARCHIVE);
 	gl_customheight = Cvar_Get("gl_customheight", "768", CVAR_ARCHIVE);
 	gl_msaa_samples = Cvar_Get ( "gl_msaa_samples", "0", CVAR_ARCHIVE );
+
+	gl_hudscale = Cvar_Get ("gl_hudscale", "1", CVAR_ARCHIVE);
 
 #ifdef RETEXTURE
 	gl_retexturing = Cvar_Get("gl_retexturing", "1", CVAR_ARCHIVE);
