@@ -1,3 +1,7 @@
+Quake II 5.22 to 5.23:
+- Provide gl_hudscale cvar that can be changed to
+  scale the HUD, for high resolutions etc (by caedes)
+
 Quake II 5.21 to 5.22:
 - Provide a fallback if SDL2s relative mouse mode
   cannot be activated.
